// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs renders basic 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  color: #4f6f8f;
  margin: 8px;
}

.c2 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #4f6f8f;
}

.c2:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c4 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #001023;
}

.c4:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <a
      className="c2"
      color="text.light"
      href="https://www.priceline.com"
      rel={null}
    >
      Home
    </a>
    <div
      className="c3"
      color="text.light"
    >
      /
    </div>
  </div>
  <div
    className="c1"
  >
    <a
      className="c2"
      color="text.light"
      href="https://www.priceline.com/flights/"
      rel={null}
    >
      Flights
    </a>
    <div
      className="c3"
      color="text.light"
    >
      /
    </div>
  </div>
  <div
    className="c1"
  >
    <a
      className="c4"
      color="text.dark"
      href="https://www.priceline.com/flights/"
      rel={null}
    >
      Seat Selection
    </a>
  </div>
</div>
`;

exports[`Breadcrumbs renders with icons 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  color: #4f6f8f;
  margin: 8px;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 8px;
  color: #4f6f8f;
}

.c7 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 8px;
  color: #001023;
}

.c6 {
  outline: none;
}

.c3 {
  outline: none;
}

.c8 {
  outline: none;
}

.c4 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #4f6f8f;
}

.c4:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c9 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #001023;
}

.c9:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <svg
      aria-hidden={true}
      className="c2 c3"
      color="text.light"
      fill="currentcolor"
      focusable={false}
      height={16}
      role="img"
      tabIndex={-1}
      viewBox="0 0 24 24"
      width={16}
    >
      <path
        d="M10 20.5v-6h4v6h5v-8h3l-10-9-10 9h3v8h5z"
      />
    </svg>
    <a
      className="c4"
      color="text.light"
      href="https://www.priceline.com"
      rel={null}
    >
      Home
    </a>
    <div
      className="c5"
      color="text.light"
    >
      /
    </div>
  </div>
  <div
    className="c1"
  >
    <svg
      aria-hidden={true}
      className="c2 c6"
      color="text.light"
      fill="currentcolor"
      focusable={false}
      height={16}
      role="img"
      tabIndex={-1}
      viewBox="0 0 24 24"
      width={16}
    >
      <path
        d="M21.5 16v-2l-8-5V3.5c0-.8-.7-1.5-1.5-1.5s-1.5.7-1.5 1.5V9l-8 5v2l8-2.5V19l-2 1.5V22l3.5-1 3.5 1v-1.5l-2-1.5v-5.5l8 2.5z"
      />
    </svg>
    <a
      className="c4"
      color="text.light"
      href="https://www.priceline.com/flights/"
      rel={null}
    >
      Flights
    </a>
    <div
      className="c5"
      color="text.light"
    >
      /
    </div>
  </div>
  <div
    className="c1"
  >
    <svg
      aria-hidden={true}
      className="c7 c8"
      color="text.dark"
      fill="currentcolor"
      focusable={false}
      height={16}
      role="img"
      tabIndex={-1}
      viewBox="0 0 24 24"
      width={16}
    >
      <path
        d="M4 18v3h3v-3h10v3h3v-6H4v3zm15-8h3v3h-3v-3zM2 10h3v3H2v-3zm15 3H7V5c0-1.1.9-2 2-2h6c1.1 0 2 .9 2 2v8z"
      />
    </svg>
    <a
      className="c9"
      color="text.dark"
      href="https://www.priceline.com/flights/"
      rel={null}
    >
      Seat Selection
    </a>
  </div>
</div>
`;
